integration vs distribution

--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -31,7 +31,7 @@ kódu a tím jsou zvýšeny náklady na vývoj systému a riziko lidské chyby.
 
 %\goal{Motivace a cíle}
 Cílem této práce je prozkoumat myšlenku inovativního přístupu k centrální správě a automatické
-distribuci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
+integraci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
 a navrhnout framework, který by umožnil tento přístup uplatnit v praxi.
 Tento koncept by měl díky využití aspektově orientovaného programování usnadnit práci vývojářů
 a doménových expertů. Díky tomu by mohl přinést snížení nákladů na vývoj a údržbu informačních systémů
@@ -41,14 +41,14 @@ a tím zvýšit jejich kvalitu a snížit náklady na jejich vývoj.
 Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky bynysov\'ych pravidel a
 architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy,
 a v závěru identifikuje požadavky kladené na framework pro centráln\'{\i} správu a
-automatickou distribuci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
+automatickou integraci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
 se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch pr\'{\i}stupu k v\'yvoji informacn\'{\i}ch systému a speciálně se zaměřuje
 na koncepty aspektově orientovaného programován\'{\i} a modern\'{\i}ho aspekty ř\'{\i}zeného př\'{\i}stupu k návrhu
 systémů. Dále se kapitola věnuje průzkumu existuj\'{\i}c\'{\i}ch nástrojů pro správu byznysov\'ych pravidel a existujícím
-síťovým architekturám, které budou sloužit pro automatickou distribuci byznysových pravidel mezi službami.
+síťovým architekturám, které budou sloužit pro distribuci byznysových pravidel mezi službami.
 Kapitola~\ref{ch:navrh} formalizuje prostřed\'{\i} architektury orientované na služby do terminologie
 aspektově orientovaného programován\'{\i} a na základě této formalizace navrhuje koncept frameworku,
-kter\'y realizuje centráln\'{\i} správu a automatickou distribuci byznysov\'ych pravidel.
+kter\'y realizuje centráln\'{\i} správu a automatickou integraci byznysov\'ych pravidel.
 V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržen\'y framework
 pro platformy jazyků Java a Python a frameworku Node.js. Následuj\'{\i}c\'{\i} kapitola~\ref{ch:verifikace}
 popisuje, jak\'ym způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
