--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -3,7 +3,7 @@
 \chapter{Návrh}\label{ch:navrh}
 
 V této kapitole je diskutován návrh frameworku pro centrální správu
-a automatickou distribuci business pravidel vyhovující požadavkům identifikovaným
+a automatickou integraci business pravidel vyhovující požadavkům identifikovaným
 v sekci~\ref{sec:implementation-requirements}. Tento návrh staví na znalostech získaných
 v předchozí kapitole~\ref{ch:reserse}, zejména na paradigmatu \gls{AOP} a přístupu \gls{ADDA}.
 
