--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -384,7 +384,7 @@ chybovou hlášku.
 %\goal{Dosáhli jsme vytyčen\'ych c\'{\i}lů implementace}
 Na základě navrženého frameworku byly implementovány prototypy
 knihoven pro platformy jazyka Java, jazyka Python a
-Node.js. Knihovny umožňuj\'{\i} centráln\'{\i} správu a automatickou distribuci
+Node.js. Knihovny umožňuj\'{\i} centráln\'{\i} správu a automatickou distribuci a integraci
 byznysov\'ych kontextů, včetně vyhodnocován\'{\i} jejich pravidel, za
 použit\'{\i} aspektově orientovaného př\'{\i}stupu.
 V rámci této kapitoly byl specifikován \gls{DSL}, kter\'ym lze popsat
