--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -100,7 +100,7 @@ v\'yraz, kterému je předán argument \code{null} a je ověřeno, že v\'yraz s
 \section{Př\'{\i}padová studie: e-commerce systém}
 
 Abychom mohli navržen\'y a implementovan\'y framework pro centráln\'{\i} správu
-a automatickou distribuci byznys pravidel verifikovat v praxi a validovat
+a automatickou integraci byznys pravidel verifikovat v praxi a validovat
 jeho myšlenku, bylo nutné vyzkoušet jeho nasazen\'{\i} při v\'yvoji aplikace.
 Pro tento účel vznikla v rámci této práce př\'{\i}padová studie na fiktivn\'{\i}m
 ukázkovém e-commerce systému využ\'{\i}vaj\'{\i}c\'{\i} architekturu orientovanou na služby.
@@ -409,7 +409,7 @@ Manuáln\'{\i} duplikace nav\'{\i}c přináš\'{\i} nutnost synchronizovat podob
 
 \goal{V\'yhody frameworku}
 D\'{\i}ky použit\'{\i} navrženého frameworku je však možné každé pravidlo nadefinovat centrálně
-a framework se postará o jeho automatickou distribuci do všech m\'{\i}st, kde je potřeba ho aplikovat.
+a framework se postará o jeho automatickou integraci do všech částí systému, kde má být aplikováno.
 D\'{\i}ky tomu je možno byznysová pravidla, resp. kontexty, spravovat pomoc\'{\i} nástroje pro
 centráln\'{\i} správu, kter\'y je součást\'{\i} navrženého frameworku. Z toho vypl\'yvá
 sn\'{\i}žen\'{\i} nároků na v\'yvoj a sn\'{\i}žené riziko lidské chyby.
