--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -5,7 +5,9 @@
 
 \chapter{Závěr}\label{ch:zaver}
 
-\section{Anal\'yza dopadu použit\'{\i} frameworku}
+\section{Přínos použití frameworku}
+
+
 
 \section{Budouc\'{\i} rozšiřitelnost frameworku}
 
