chapter 7 first version

--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -111,7 +111,7 @@ obrázku~\ref{fig:business-rules-weaver}.
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-rules-weaver.pdf}
     \caption{Diagram aktivit weaverů byznysov\'ych pravidel}
     \label{fig:business-rules-weaver}
-\end{figure} % TODO: popsat
+\end{figure}
 
 \section{Dědičnost byznysových kontextů}\label{sec:context-inheritance}
 
