--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -5,17 +5,18 @@
 
 \chapter{Verifikace a validace}\label{ch:verifikace}
 
-V této kapitole si pop\'{\i}šeme, jak\'y způsobem byla provedena
+Tato kapitola popisuje, jak\'y způsobem byla provedena
 verifikace naprogramovan\'ych knihoven pomoc\'{\i}
-jednotkov\'ych a integračn\'{\i}ch testů~\cite{luo2001software}
-a také jak byly knihovny nasazeny při v\'yvoji ukázkového systému.
-T\'{\i}m zároveň zvalidujeme koncept frameworku a shrneme v\'yhody
-a nev\'yhody jeho použit\'{\i}.
+jednotkov\'ych a integračn\'{\i}ch testů.
+Kapitola se dále věnuje popisu ukázkového systému, na kterém
+byla demonstrována správná funkčnost navrženého frameworku
+a provedena analýza vlivu jeho nasazení na duplikaci
+byznysových pravidel.
 
 \section{Testován\'{\i} prototypů knihoven}
 
 Prototypy knihoven, jejichž implementaci je popsána v kapitole~\ref{ch:implementace},
-byly důkladně otestovány pomoc\'{\i} sady jednotkov\'ych a integračn\'{\i}ch testů
+byly důkladně otestovány pomoc\'{\i} sady jednotkov\'ych a integračn\'{\i}ch testů~\cite{luo2001software}
 a t\'{\i}m byla verifikována jejich správná funkcionalita. Způsob
 testován\'{\i} knihoven je popsán zvlášť pro každou platformu.
 
