--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -31,6 +31,7 @@
 \newglossaryentry{LHS}{name=LHS,description={Left-hand side}}
 \newglossaryentry{LOP}{name=LOP,description={Language-Oriented Programming}}
 \newglossaryentry{MDA}{name=MDA,description={Model-Driver Architecture}}
+\newglossaryentry{MIT}{name=MIT,description={Massachusetts Institute of Technology}}
 \newglossaryentry{MQ}{name=MQ,description={Message Queue}}
 \newglossaryentry{NAT}{name=NAT,description={Native Address Translation}}
 \newglossaryentry{OCL}{name=OCL,description={Object Constraint Language}}
