--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -395,6 +395,6 @@ funkčn\'{\i}ho systému, jak je popisáno v následuj\'{\i}c\'{\i} kapitole.
 %\goal{Hostován\'{\i} na GitHubu + licence}
 Vešker\'y kód implementace je hostován v centráln\'{\i}m repozitáři
 ve službě GitHub\footnote{https://github.com/klimesf/diploma-thesis}
-a je zpř\'{\i}stupněn pod open-source licenc\'{\i} MIT~\cite{mitlicense}.
+a je zpř\'{\i}stupněn pod open-source licenc\'{\i} \gls{MIT}~\cite{mitlicense}.
 Knihovny pro jednotlivé platformy tedy lze libovolně
 využ\'{\i}vat, modifikovat a š\'{\i}řit.
