--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -41,6 +41,7 @@ kdy náklady na manuální duplikaci pravidel přesáhnou cenu za návrh a využ
 
 Navržený framework podporuje budoucí rozšíření o další moduly a funkce, které
 dále zvýší jeho schopnost znovupoužití byzynsových pravidel v \gls{SOA}.
+Díky svobodné licenci \gls{MIT} může framework rožšířit a volně používat kdokoliv.
 
 \subsection{Univerzální doménově specifický jazyk}
 Zadáním této práce nebylo zkonstruovat vlastní \gls{DSL}
