--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -182,6 +182,37 @@ Protože volaná funkce může potřebovat přistupovat k operačnímu kontextu,
 Bohužel nelze u uživatelem definovaných funkcí ověřit, že bude při jejich volání odpovídat počet a typ argumentů.
 Přehled všech výrazů, které bude framework podporovat, je v tabulce~\ref{tbl:expressions},
 
+\afterpage{%
+\clearpage% Flush earlier floats (otherwise order might not be correct)
+\begin{landscape}
+    \begin{table}
+        \centering
+        \begin{tabular}{ l l l c c }
+            \hline
+            \textbf{Název} & \textbf{Argumenty} & \textbf{Atributy} & \textbf{Návratový typ} & \textbf{Typ výrazu} \\ \hline \hline
+            \textbf{Constant} & - & Hodnota a typ konstanty & \code{?} & Terminál \\
+            \textbf{FunctionCall} & Libovolný počet argumentů & Návratový typ funkce & \code{?} & Terminál \\
+            \textbf{IsNotNull} & Jeden argument libovolného typu & - & \code{BOOL} & Neterminál \\
+            \textbf{IsNotBlank} & Jeden argument typu \code{STRING} & - & \code{BOOL} & Neterminál \\
+            \textbf{LogicalAnd} & 2 argumenty typu \code{BOOL} & - & \code{BOOL} & Neterminál \\
+            \textbf{LogicalEquals} & 2 argumenty libovolného typu & - & \code{BOOL} & Neterminál \\
+            \textbf{LogicalNegate} & 1 argument typu \code{BOOL} & - & \code{BOOL} & Neterminál \\
+            \textbf{LogicalOr} & 2 argumenty typu \code{BOOL} & - & \code{BOOL} & Neterminál \\
+            \textbf{NumericAdd} & 2 argumenty typu \code{NUMBER} & - & \code{NUMBER} & Neterminál \\
+            \textbf{NumericSubtract} & 2 argumenty typu \code{NUMBER} & - & \code{NUMBER} & Neterminál \\
+            \textbf{NumericMultiply} & 2 argumenty typu \code{NUMBER} & - & \code{NUMBER} & Neterminál \\
+            \textbf{NumericDivide} & 2 argumenty typu \code{NUMBER} & - & \code{NUMBER} & Neterminál \\
+            \textbf{ObjectReference} & - & Název objektu a název a typ proměnné & \code{?} & Terminál \\
+            \textbf{VariableReference} & - & Název a typ proměnné & \code{?} & Terminál \\
+            \hline
+        \end{tabular}
+        \caption{Přehled výrazů pro zápis byznysového pravidla}
+        \label{tbl:expressions}
+    \end{table}
+\end{landscape}
+\clearpage% Flush page
+}
+
 \goal{Typované výrazy}
 Pro snažší implementaci na více platformách a prevenci sémantických chyb v pravidlech budou výrazy
 obsahovat i explicitní definici svého návratového typu. Výraz byznysového pravidla může nabývat logických hodnot,
