--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -195,7 +195,7 @@ basicstyle=\fontsize{10}{12}\selectfont\ttfamily
 \appendix
 
 \input{content/appendix-A-snimky}
-\input{content/appendix-B-tabulky}
+%\input{content/appendix-B-tabulky}
 \input{content/appendix-C-uzivatelska-prirucka}
 \input{content/appendix-D-zkratky}
 \input{content/appendix-E-cd}
