--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -5,7 +5,7 @@
 
 \chapter{Implementace prototypů knihoven}\label{ch:implementace}
 
-\goal{Uveden\'{\i} kapitoly a nast\'{\i}něn\'{\i} obsahu}
+%\goal{Uveden\'{\i} kapitoly a nast\'{\i}něn\'{\i} obsahu}
 Součást\'{\i} zadán\'{\i} této práce je implementace prototypů
 knihoven pro framework navržen\'y v kapitole~\ref{ch:navrh}
 pro tři rozd\'{\i}lné platformy, z nichž jedna mus\'{\i} b\'yt \textit{Java}.
