--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -378,7 +378,7 @@ language=Yaml,
 
 \section{Srovnán\'{\i} s konvenčn\'{\i}m př\'{\i}stupem}
 
-\goal{Ukázka na konkrétn\'{\i}m př\'{\i}kladě}
+%\goal{Ukázka na konkrétn\'{\i}m př\'{\i}kladě}
 Z tabulky~\ref{tbl:business-contexts} plyne, že 60 \% byznysov\'ych pravidel v ukázkovém systému je
 využ\'{\i}váno ve v\'{\i}ce kontextech, a polovina je využ\'{\i}vána např\'{\i}č v\'{\i}ce službami.
 V tabulce~\ref{tbl:duplication} je přehledně shrnuto, která pravidla jsou využ\'{\i}vána ve kter\'ych službách.
@@ -408,14 +408,14 @@ Manuáln\'{\i} duplikace nav\'{\i}c přináš\'{\i} nutnost synchronizovat podob
     \label{tbl:duplication}
 \end{table}
 
-\goal{V\'yhody frameworku}
+%\goal{V\'yhody frameworku}
 D\'{\i}ky použit\'{\i} navrženého frameworku je však možné každé pravidlo nadefinovat centrálně
 a framework se postará o jeho automatickou integraci do všech částí systému, kde má být aplikováno.
 D\'{\i}ky tomu je možno byznysová pravidla, resp. kontexty, spravovat pomoc\'{\i} nástroje pro
 centráln\'{\i} správu, kter\'y je součást\'{\i} navrženého frameworku. Z toho vypl\'yvá
 sn\'{\i}žen\'{\i} nároků na v\'yvoj a sn\'{\i}žené riziko lidské chyby.
 
-\goal{Nev\'yhody použit\'{\i}}
+%\goal{Nev\'yhody použit\'{\i}}
 Jako nev\'yhodu použit\'{\i} frameworku lze považovat počátečn\'{\i} investici v
 podobě integrace knihoven do služeb systému. Zvážit mus\'{\i}me i cenu popisu byznysov\'ych pravidel
 v \gls{DSL}, kter\'y se musej\'{\i} v\'yvojáři systému naučit nav\'{\i}c oproti programovac\'{\i}mu jazyku,
@@ -423,7 +423,7 @@ ve kterém popisuj\'{\i} služby. Dále je při návrhu systému potřeba identi
 hirearchii a vzájemnou vazbu s byznysov\'mi pravidly, aby bylo možno framework efektivně využ\'{\i}vat.
 To může vyžadovat v\'{\i}ce času, než klasick\'y návrh.
 
-\goal{Závěr}
+%\goal{Závěr}
 Navržen\'y framework tedy oproti konvenčn\'{\i}mu př\'{\i}stupu nab\'{\i}z\'{\i} možnost z\'{\i}skat dlouhodobě
 nižš\'{\i} náklady na v\'yvoj za cenu počátečn\'{\i} investice. Architekt softwarového systému mus\'{\i} př\'{\i}padné nasazen\'{\i}
 frameworku zvážit z několika úhlů pohledu a posoudit, zda bude životnost systému dostatečně dlouhá a systém
