--- a/content/chapter-07-zaver.tex
+++ b/content/chapter-07-zaver.tex
@@ -5,8 +5,8 @@
 
 \chapter{Závěr}\label{ch:zaver}
 
-Architektura orientovaná na služby usnadňuje vývoj komplexních informačních
-systému díky jejich členění do menších, samostatných celků. Díky tomu lze
+Architektura orientovaná na služby přináší snažší způsob vývoje komplexních
+informačních systému díky jejich členění do menších celků. Díky tomu lze
 snáze oddělit zodpovědnost a zvýšit znovupoužitelnost komponent systému.
 Existuje však funkcionalita, která zasahuje do více služeb najednou a je
 potřeba ji všude vykonávat konzistentně. Zástupcem této funkcionality jsou
