--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -176,7 +176,7 @@ umožňuje kompletn\'{\i} definici rozhran\'{\i} pro komunikaci mezi službami.
 %\end{figure}
 
 Dalš\'{\i}m z konceptů, kter\'y v rámci \gls{SOA} vznikl, je tzv. \textit{Message Queue} (\gls{MQ}).
-Základn\'{\i} myšlenkou \gls{MQ}, znázorněnou na obrázku~\ref{fig:message-queue},
+Základn\'{\i} myšlenkou \gls{MQ} %, znázorněnou na obrázku~\ref{fig:message-queue},
 je asynchronn\'{\i} komunikace služeb pomoc\'{\i} zpráv nezávisl\'ych
 na platformě. Komunikaci zprostředkovává fronta, která přij\'{\i}má a rozes\'{\i}lá
 zprávy mezi službami. To přináš\'{\i} vyšš\'{\i} škálovatelnost a menš\'{\i} provázanost
