--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -123,8 +123,8 @@ Chtěl bych poděkovat Ing. Karlovi Čemusovi za jeho trpělivost, podporu a
 cenné rady nejen při vedení této práce, ale po celou dobu mého studia.
 Děkuji své rodině, přítelkyni a přátelům za zázemí a podporu, kterou
 mi po dobu studia poskytovali a bez které bych ho nemohl dokončit.
-Děkuji také svým kolegům, kteří mě motivovali k dosahování vynikajících
-výsledků v průběhu magisterského studia.
+Děkuji také svým kolegům ve škole i v zaměstnání, kteří mě motivovali k
+dosažení vynikajících výsledků v průběhu magisterského studia.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
