--- a/content/chapter-02-analyza.tex
+++ b/content/chapter-02-analyza.tex
@@ -195,7 +195,7 @@ veškerou komunikaci v systému.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.6\linewidth]{figures/enterprise-service-bus.pdf}
-    \caption{Komunikace služeb skrz Enterprise Service Bus}
+    \caption{Komunikace služeb pomocí Enterprise Service Bus}
     \label{fig:enterprise-service-bus}
 \end{figure}
 
@@ -236,7 +236,7 @@ znázorněno na obrázku~\ref{fig:choreography-orchestration}.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/choreography-orchestration.pdf}
-    \caption{Porovnán\'{\i} orchestrace a choreografie služeb~\cite{cerny2017disambiguation}}
+    \caption{Porovnán\'{\i} orchestrace a choreografie služeb}
     \label{fig:choreography-orchestration}
 \end{figure}
 
@@ -301,7 +301,7 @@ dramaticky se zvyšuje náročnost na údržbu takového systému.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/service-cutting.pdf}
-    \caption{Př\'{\i}klad zásahu jedné funkcionality do v\'{\i}ce služeb}
+    \caption{Př\'{\i}klad funkcionality zasahující do v\'{\i}ce služeb}
     \label{fig:service-cutting}
 \end{figure}
 
