--- a/content/chapter-04-navrh.tex
+++ b/content/chapter-04-navrh.tex
@@ -81,7 +81,7 @@ pouze pravidla jednoho kontextu.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=1\linewidth]{figures/context-extension.pdf}
-    \caption{Diagram znázorňující dědičnost kontextů ve vztahu k join-pointům a pointcuts}
+    \caption{Dědičnost kontextů ve vztahu k join-pointům a pointcuts}
     \label{fig:context-extension}
 \end{figure}
 
@@ -109,7 +109,7 @@ obrázku~\ref{fig:business-rules-weaver}.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/business-rules-weaver.pdf}
-    \caption{Diagram aktivit weaverů byznysov\'ych pravidel}
+    \caption{Proces weavingu byznysov\'ych pravidel}
     \label{fig:business-rules-weaver}
 \end{figure}
 
@@ -130,7 +130,7 @@ aby kontext \code{user.register} zdědil pravidlo vyžadující přihlášení u
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=1\linewidth]{figures/abstract-context.pdf}
-    \caption{Diagram konceptu abstraktního byznysového kontextu}
+    \caption{Znázornění abstraktního byznysového kontextu}
     \label{fig:abstract-context}
 \end{figure}
 
@@ -155,7 +155,7 @@ vyhodnocena v~\ref{itm:after}.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=1\linewidth]{figures/expression.pdf}
-    \caption{Diagram tříd popisující použití vzoru Intepreter pro vyhodnocování logických výrazů}
+    \caption{Použití vzoru Intepreter pro vyhodnocování logických výrazů}
     \label{fig:expression}
 \end{figure}
 
@@ -269,7 +269,7 @@ například filtrování e-mailových adres v kolekci více uživatelů. Itentif
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-metamodel.pdf}
-    \caption{Diagram tř\'{\i}d metamodelu byznysového kontextu}
+    \caption{Metamodel byznysového kontextu}
     \label{fig:business-context-metamodel}
 \end{figure}
 
@@ -301,7 +301,7 @@ Princip použití vzoru Visitor je znázorněn na obrázku~\ref{fig:expression-v
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=1\linewidth]{figures/expression-visitor.pdf}
-    \caption{Diagram tříd popisující využití vzoru Visitor pro zápis logických výrazů v \gls{DSL}}
+    \caption{Využití vzoru Visitor pro zápis logických výrazů v \gls{DSL}}
     \label{fig:expression-visitor}
 \end{figure}
 
@@ -335,7 +335,7 @@ nebude nijak záviset.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-loading.pdf}
-    \caption{Diagram procesu inicializace byznysov\'ych kontextů}
+    \caption{Proces inicializace byznysov\'ych kontextů}
     \label{fig:business-context-loading}
 \end{figure}
 
@@ -373,7 +373,7 @@ komunikace týkající se distribuce byznysových pravidel.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-management.pdf}
-    \caption{Diagram procesu centráln\'{\i} správy byznysov\'ych kontextů}
+    \caption{Proces centráln\'{\i} správy byznysov\'ych kontextů}
     \label{fig:business-context-management}
 \end{figure}
 
@@ -401,7 +401,7 @@ filtrování dat při jejich získávání z databáze.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/business-context-registry.pdf}
-    \caption{Diagram tříd zachycující architekturu navrženého frameworku}
+    \caption{Architektura navrženého frameworku}
     \label{fig:business-context-registry}
 \end{figure}
 
