--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -157,7 +157,7 @@ kompletn\'{\i} doménov\'y model ukázkového systému.
 \begin{figure}[ht]
     \centering
     \includegraphics[keepaspectratio=true, width=0.9\linewidth]{figures/example-model.pdf}
-    \caption{Diagram tř\'{\i}d modelu ukázkového e-commerce systému}
+    \caption{Doménový model ukázkového e-commerce systému}
     \label{fig:example-model}
 \end{figure}
 
@@ -258,7 +258,7 @@ způsob \textit{service discovery} nebylo problém do systému integrovat.
 \begin{figure}
     \centering
     \includegraphics[keepaspectratio=true, width=0.8\linewidth]{figures/example-system.pdf}
-    \caption{Diagram komponent ukázkového e-commerce systému}
+    \caption{Komponenty ukázkového e-commerce systému}
     \label{fig:example-system}
 \end{figure}
 
