--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -50,7 +50,7 @@ Kapitola~\ref{ch:navrh} formalizuje prostřed\'{\i} architektury orientované na
 aspektově orientovaného programován\'{\i} a na základě této formalizace navrhuje koncept frameworku,
 kter\'y realizuje centráln\'{\i} správu a automatickou integraci byznysov\'ych pravidel.
 V kapitole~\ref{ch:implementace} je detailně probrána implementace knihoven pro navržen\'y framework
-pro platformy jazyků Java a Python a frameworku Node.js. Následuj\'{\i}c\'{\i} kapitola~\ref{ch:verifikace}
+na platformách jazyků Java a Python a frameworku Node.js. Následuj\'{\i}c\'{\i} kapitola~\ref{ch:verifikace}
 popisuje, jak\'ym způsobem byly tyto knihovny otestovány a jak byla prokázána jejich funkčnost. Zároveň
 je zde popsána validace a vyhodnocen\'{\i} konceptu frameworku jeho nasazen\'{\i}m při v\'yvoji
 jednoduchého ukázkového e-commerce systému. V posledn\'{\i} kapitole~\ref{ch:zaver} je shrnuto, jak\'ych
