--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -12,7 +12,7 @@ pro tři rozd\'{\i}lné platformy, z nichž jedna mus\'{\i} b\'yt \textit{Java}.
 Tato kapitola popisuje výběr plaforem a konkrétní implementace
 knihoven pro tyto platformy. Jelikož jednotlivé implementace
 vycházejí ze stejného návrhu, kompletní implementace
-je opsána pouze pro platformu Java a ostatní jsou shrnuty
+je popsána pouze pro platformu Java a ostatní jsou shrnuty
 komparativní metodou. Součástí kapitoly je i stručný popis
 použitých technologií pro lepší kontext.
 
